Link to External Pages with Anchor Elements

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -6,6 +6,7 @@
         <h2>CatPhotoApp</h2>
 
         <main>
+            <a href="https://freecatphotoapp.com" target="_blank">cat photos</a>
             <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
 
             <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
