Nest an Anchor Element within a Paragraph

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -5,7 +5,7 @@
     <body>
         <h2>CatPhotoApp</h2>
          <main>
-            <a href="https://freecatphotoapp.com" target="_blank">cat photos</a>
+            <p>Click here to view more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a>.</p>
 
             <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
 
