--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -4,13 +4,18 @@
     </head>
     <body>
         <h2>CatPhotoApp</h2>
-         <main>
-            <p>Click here to view more <a href="https://freecatphotoapp.com" target="_blank">cat photos</a>.</p>
+        <main>
+            <p>Click here to view more <a href="#">cat photos</a>.</p>
 
-            <img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back.">
+            <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
-            <p>Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the grass sniff.</p>
-            <p>Purr jump eat the grass rip the couch scratched sunbathe, shed everywhere rip the couch sleep in the sink fluffy fur catnip scratched.</p>
+            <p>Things cats love:</p>
+            <ul>
+                <li>cat nip</li>
+                <li>laser pointers</li>
+                <li>lasagna</li>
+            </ul>
+            <p>Top 3 things cats hate:</p>
         </main>
     </body>
 </html>
