Create an Ordered List

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -16,6 +16,11 @@
                 <li>lasagna</li>
             </ul>
             <p>Top 3 things cats hate:</p>
+            <ol>
+                <li>flea treatment</li>
+                <li>thunder</li>
+                <li>other cats</li>
+            </ol>
         </main>
     </body>
 </html>
