--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -10,16 +10,18 @@
             <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
 
             <p>Things cats love:</p>
-            <ul>
+            <ul> <!-- Lista não ordenada -->
                 <li>cat nip</li>
                 <li>laser pointers</li>
                 <li>lasagna</li>
             </ul>
             <p>Top 3 things cats hate:</p>
-            <ol>
+            <ol> <!-- Lista ordenada -->
                 <li>flea treatment</li>
                 <li>thunder</li>
                 <li>other cats</li>
+
+                <input type="text"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
             </ol>
         </main>
     </body>
