Add Placeholder Text to a Text Field

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -20,9 +20,8 @@
                 <li>flea treatment</li>
                 <li>thunder</li>
                 <li>other cats</li>
-
-                <input type="text"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
             </ol>
+            <input type="text" placeholder="cat photo URL"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
         </main>
     </body>
 </html>
