Create a Form Element

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -21,7 +21,9 @@
                 <li>thunder</li>
                 <li>other cats</li>
             </ol>
-            <input type="text" placeholder="cat photo URL"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
+            <form> <!-- Formulário web para envio de dados a um servidor -->>
+                <input type="text" placeholder="cat photo URL"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
+            </form>
         </main>
     </body>
 </html>
