Add a Submit Button to a Form

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -21,8 +21,9 @@
                 <li>thunder</li>
                 <li>other cats</li>
             </ol>
-            <form> <!-- Formulário web para envio de dados a um servidor -->>
+            <form action="https://freecatphotoapp.com/submit-cat-photo"> <!-- Formulário web para envio de dados a um servidor -->
                 <input type="text" placeholder="cat photo URL"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
+                <button type="submit">Submit</button> <!-- Botão para envio de dados do formulário para a URL especificada com o atributo action -->
             </form>
         </main>
     </body>
