--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -22,7 +22,7 @@
                 <li>other cats</li>
             </ol>
             <form action="https://freecatphotoapp.com/submit-cat-photo"> <!-- Formulário web para envio de dados a um servidor -->
-                <input type="text" placeholder="cat photo URL"> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
+                <input type="text" placeholder="cat photo URL" required> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
                 <button type="submit">Submit</button> <!-- Botão para envio de dados do formulário para a URL especificada com o atributo action -->
             </form>
         </main>
