Create a Set of Radio Buttons

--- a/Basic HTML and HTML5/index.html
+++ b/Basic HTML and HTML5/index.html
@@ -22,6 +22,8 @@
                 <li>other cats</li>
             </ol>
             <form action="https://freecatphotoapp.com/submit-cat-photo"> <!-- Formulário web para envio de dados a um servidor -->
+                <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor"> indoor</label> <!-- Conjunto de botões -->
+                <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor"> outdoor</label><br>
                 <input type="text" placeholder="cat photo URL" required> <!-- Elemento de entrada para obter informações do usuário (Tipo: texto) -->
                 <button type="submit">Submit</button> <!-- Botão para envio de dados do formulário para a URL especificada com o atributo action -->
             </form>
