--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -3,7 +3,12 @@
     <head>
     </head>
     <body>
-        <h2 style="color: red;">CatPhotoApp</h2>
+        <style>
+            h2 {
+                color: blue;
+            }
+        </style>
+        <h2>CatPhotoApp</h2>
         <main>
             <p>Click here to view more <a href="#">cat photos</a>.</p>
 
