--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -4,11 +4,11 @@
     </head>
     <body>
         <style>
-            h2 {
-                color: blue;
+            .red-text {
+                color: red;
             }
         </style>
-        <h2>CatPhotoApp</h2>
+        <h2 class="red-text">CatPhotoApp</h2>
         <main>
             <p>Click here to view more <a href="#">cat photos</a>.</p>
 
