Style Multiple Elements with a CSS Class

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -10,7 +10,7 @@
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
-            <p>Click here to view more <a href="#">cat photos</a>.</p>
+            <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
             <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
             <div> <!-- Usado como container de uso geral para outros elementos. Pode ser utilizado para agrupar elementos  -->
