--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -7,6 +7,10 @@
             .red-text {
                 color: red;
             }
+
+            p {
+                font-size: 16px;
+            }
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
