--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -10,6 +10,7 @@
 
             p {
                 font-size: 16px;
+                font-family: monospace;
             }
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
