Specify How Fonts Should Degrade

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <!-- Importando a fonte Lobster do Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
         <!-- tag style para trabalhar com informações de estilo & definindo um tamanho e fonte das tag p-->
         <style>
             /* criação da classe .red-text */
@@ -14,7 +14,8 @@
 
             /* adicionando a fonte Lobster na tag h2 */
             h2 {
-                font-family: Lobster;
+                /* Se a fonte Lobster não estiver disponível, a fonte monospace será utilizada */
+                font-family: Lobster, monospace;
             }
     
             p {
