Size Your Images

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -22,12 +22,17 @@
                 font-size: 16px;
                 font-family: monospace;
             }
+            
+            /* criando classe smaller-image para redimensionamento de imagem */
+            .smaller-image {
+                width: 100px;
+            }
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
             <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-            <a href="#"><img src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+            <a href="#"><img class="smaller-image" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
             <!-- Usado como container de uso geral para outros elementos. Pode ser utilizado para agrupar elementos  -->
             <div>
                 <p>Things cats love:</p>
