Add Borders Around Your Elements

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -22,6 +22,13 @@
                 font-size: 16px;
                 font-family: monospace;
             }
+
+            /* Adicionando border para ajustar os valores de propriedades individuais da borda em um único elemento na folha do estilo. */
+            .thick-green-border {
+                border-color: green;
+                border-width: 10px;
+                border-style: solid;
+            }
             
             /* criando classe smaller-image para redimensionamento de imagem */
             .smaller-image {
@@ -32,7 +39,7 @@
         <main>
             <p class="red-text">Click here to view more <a href="#">cat photos</a>.</p>
 
-            <a href="#"><img class="smaller-image" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
+            <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
             <!-- Usado como container de uso geral para outros elementos. Pode ser utilizado para agrupar elementos  -->
             <div>
                 <p>Things cats love:</p>
