--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -28,6 +28,7 @@
                 border-color: green;
                 border-width: 10px;
                 border-style: solid;
+                border-radius: 10px;
             }
             
             /* criando classe smaller-image para redimensionamento de imagem */
