--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -35,6 +35,11 @@
             .smaller-image {
                 width: 100px;
             }
+
+            /* classe criada para uso da propriedade background-color que serve para alterar o plano de fundo, seja de um elemento ou do documento como um todo */
+            .silver-background {
+                background-color: silver;
+            }
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
@@ -42,7 +47,7 @@
 
             <a href="#"><img class="smaller-image thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back."></a>
             <!-- Usado como container de uso geral para outros elementos. Pode ser utilizado para agrupar elementos  -->
-            <div>
+            <div class="silver-background">
                 <p>Things cats love:</p>
                 <!-- Lista não ordenada -->
                 <ul> 
