Set the id of an Element

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -64,7 +64,7 @@
                 </ol>
             </div>
             <!-- Formulário web para envio de dados a um servidor -->
-            <form action="https://freecatphotoapp.com/submit-cat-photo">
+            <form action="https://freecatphotoapp.com/submit-cat-photo" id="cat-photo-form">
                 <!-- Conjunto de botões (Radio Button) -->
                 <label for="indoor"><input id="indoor" type="radio" name="indoor-outdoor" value="indoor" checked> Indoor</label>
                 <label for="outdoor"><input id="outdoor" type="radio" name="indoor-outdoor" value="outdoor"> Outdoor</label><br>
