Use an id Attributeto Style an Element

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -7,11 +7,6 @@
         <!-- <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css"> -->
         <!-- tag style para trabalhar com informações de estilo & definindo um tamanho e fonte das tag p-->
         <style>
-            /* criação da classe .red-text */
-            .red-text { 
-                color: red;
-            }
-
             /* adicionando a fonte Lobster na tag h2 */
             h2 {
                 /* Se a fonte Lobster não estiver disponível, a fonte monospace será utilizada */
@@ -21,6 +16,16 @@
             p {
                 font-size: 16px;
                 font-family: monospace;
+            }
+
+            /* criação da classe .red-text */
+            .red-text { 
+                color: red;
+            }
+
+            /* Estilizar elemento com o id abaixo (Uso do caractere # para referenciar o id)  */
+            #cat-photo-form {
+                background-color: green;
             }
 
             /* Adicionando border para ajustar os valores de propriedades individuais da borda em um único elemento na folha do estilo. */
@@ -40,6 +45,8 @@
             .silver-background {
                 background-color: silver;
             }
+
+            
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
