Use Attribute Selectors to Style Elements

--- a/Basic CSS/index.html
+++ b/Basic CSS/index.html
@@ -45,6 +45,11 @@
             .silver-background {
                 background-color: silver;
             }
+
+            /* Usando seletor de atributo [attr=value] para estilizar as checkboxes */
+            [type='checkbox'] {
+                margin: 10px 0px 15px 0px;
+            }
         </style>
         <h2 class="red-text">CatPhotoApp</h2>
         <main>
